# etcher

./: .gitignore  Cargo.toml  LICENSE  README.md  canister_ids.json  deploy.sh  dfx.json  docker-compose.yml  gen_candid.sh  gen_candid_and_wasm.sh  init.sh  package-lock.json  package.json  runes.txt
docker/: Dockerfile  bitcoin.conf
src/etcher_backend/: Cargo.toml  etcher_backend.did
src/etcher_backend/src/: btc_api.rs  ckbtc_api.rs  ecdsa_api.rs  lib.rs  schnorr_api.rs  state.rs  tags.rs  types.rs  utils.rs
src/etcher_frontend/: package.json  svelte.config.js
src/etcher_frontend/src/lib/: canisters.js  index.ts
src/etcher_frontend/src/lib/components/: Etcher.svelte  EtchingModal.svelte  Login.svelte  MessageModal.svelte  Navbar.svelte  PayWithBtc.svelte  PayWithCkBTC.svelte  ShowBitcoinBalance.svelte
src/etcher_frontend/src/lib/declarations/etcher_backend/: etcher_backend.did  etcher_backend.did.d.ts  etcher_backend.did.js  index.d.ts  index.js
src/etcher_frontend/src/lib/stores/: auth.store.ts  data.store.ts  message.modal.ts
src/etcher_frontend/src/routes/: +layout.svelte  +page.svelte
wasm_files/: etcher_backend.wasm
