[package]
name = "etcher_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.31.2"
bs58 = "0.5.1"
candid = "0.10"
getrandom = { version = "0.2.14", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
icrc-ledger-types = "0.1.5"
ordinals = "0.0.6"
rand = { version = "0.8.5", features = ["getrandom"] }
ripemd = "0.1.3"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
