[package]
name = "etcher_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin = "0.31.1"
bs58 = "0.5.1"
candid = "0.10"
getrandom = { version = "0.2.14", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
icrc-ledger-types = "0.1.5"
ordinals = "0.0.6"
rand = { version = "0.8.5", features = ["getrandom"] }
ripemd = "0.1.3"
serde = { version = "1.0.197", features = ["derive"] }
sha2 = "0.10.8"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
ic-crypto-extended-bip32 = { git = "https://github.com/dfinity/ic/", tag = "release-2024-03-27_23-01-p2p-ecdsa-fix" }
serde_bytes = "0.11.14"
serde_json = "1.0.115"
ed25519-dalek = "2.1.1"
hmac-sha512 = "1.1.5"
bitcoin_hashes = "0.14.0"
bip32 = { version = "0.5.1", features = ["k256"] }
