[package]
name = "etcher_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.7"
ic-cdk = "0.13.2"
ordinals = "0.0.8"
serde = { version = "1.0.198", features = ["derive"] }
bitcoin = { version = "0.30.1", features = ["serde"] }
sha2 = "0.10.2"
hex = "0.4.3"
bs58 = "0.5.0"
ripemd = "0.1.1"
icrc-ledger-types = "0.1.5"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
getrandom = { version = "0.2.14", features = ["custom"]}
ic-cdk-timers = "0.7.0"
ic-stable-structures = "0.6.4"
ciborium = "0.2.2"
slotmap = { version = "1.0.7", features = ["serde"]}
